# IMachine

./: .gitignore  CMakeLists.txt  Makefile  asm  asm.c  default.profraw  description.txt  input.txt  sizes.txt  vm  vm.c
func_tests/: a_plus_b.txt  hate.txt  inp2.txt  inp3.txt  movr.txt  screamer.txt
src/: arg_parse.c  arg_parse.h  assembler.c  assembler.h  buffered_file_reader.c  buffered_file_reader.h  code_line.c  code_line.h  executer.c  executer.h  instruction_set.c  instruction_set.h  instructions.h  macro.h  parse_number.c  parse_number.h  subprocess.c  subprocess.h  tokenized_reader.c  tokenized_reader.h  util.c  util.h
unit_tests/: .test_instruction_set.cc.swp  test_instruction_set.cc  test_non_jump_instructions.cc  test_parse_number.cc  test_subprocess.cc  test_tokenized_reader.cc
